fix: Icons no longer overflow and have a background for easier visibility

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -370,6 +370,11 @@ article {
 .icon {
   height: 2.5rem;
   width: auto;
+  max-width: 100%;
+  object-fit: contain;
+  background-color: rgba(255, 255, 255, 0.25);
+  border-radius: var(--universal-radius);
+  padding: 0.1rem;
 }
 
 /* ==== SHARED CARD STYLE ====  */
